k8s/services/media/app/jellyfin/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: media
  hostnames:
    - jellyfin.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: jellyfin
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
